# Buruma

./: .ghq-worktree-symlinks  .gitignore  .prettierignore  .prettierrc.cjs  CHANGELOG.md  CLAUDE.md  README.md  components.json  eslint.config.mjs  forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts  vitest.config.ts  vitest.setup.ts
src/: App.tsx  (+4 more)
src-tauri/: .gitignore  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/advanced_git_operations/: domain.rs
src-tauri/src/features/advanced_git_operations/application/: repositories.rs  usecases.rs
src-tauri/src/features/advanced_git_operations/infrastructure/: git_repository.rs  mod.rs
src-tauri/src/features/advanced_git_operations/presentation/: commands.rs
src-tauri/src/features/application_foundation/: domain.rs  mod.rs
src-tauri/src/features/application_foundation/application/: repositories.rs  usecases.rs
src-tauri/src/features/application_foundation/infrastructure/: dialog.rs  git_validation.rs  mod.rs  store.rs
src-tauri/src/features/basic_git_operations/: domain.rs
src-tauri/src/features/claude_code_integration/: domain.rs
src-tauri/src/features/repository_viewer/: domain.rs
src-tauri/src/features/worktree_management/: domain.rs
src-tauri/src/git/: command.rs  diff_parser.rs  log_parser.rs  mod.rs  porcelain.rs
(+1029 files in other folders)
