[package]
name = "buruma"
version = "0.2.0"
description = "Buruma - Branch-United Real-time Understanding & Multi-worktree Analyzer"
authors = ["Toshiki Imagawa"]
license = "MIT"
repository = "https://github.com/ToshikiImagawa/Buruma"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "buruma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
notify = "6"
notify-debouncer-full = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"

[dev-dependencies]
tempfile = "3"
